Pasar al menu principal una vez registrado. Cambio de idiomas. Enviar correo de invitación.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/User"
                     android:backgroundTint="@android:color/background_light"
-                    android:hint="Usuario"
+                    android:hint="@string/hint_editext_usuario_activity_main"
                     android:focusable = "true"
                     android:textColor="#ffffff"
                     android:layout_gravity="center_horizontal"
@@ -61,7 +61,7 @@
                     android:ems="10"
                     android:id="@+id/con"
                     android:backgroundTint="@android:color/background_light"
-                    android:hint="Contraseña"
+                    android:hint="@string/hint_editext_contraseña_activity_main"
                     android:focusable = "true"
                     android:textColor="#ffffff"
                     android:layout_gravity="center_horizontal"
@@ -88,7 +88,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="No eres usuario aún?"
+                    android:text="@string/tv_nousuarioaun_activity_main"
                     android:id="@+id/textView"
                     android:layout_gravity="center_horizontal"
                     android:textColor="#ffffff"
@@ -100,7 +100,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Registrate"
+                    android:text="@string/btn_registrate_activity_main"
                     android:id="@+id/link"
                     android:layout_gravity="center_horizontal"
                     android:textColor="@color/primary_dark"
