añado dialogo para coger foto al registrarse de la camara

--- a/app/src/main/res/layout/registro_3.xml
+++ b/app/src/main/res/layout/registro_3.xml
@@ -14,9 +14,7 @@
         android:layout_height="50dp"
         android:background="@color/second_accent_dark"
         android:gravity="center"
-        android:layout_marginBottom="16dp"
-        android:onClick="intentPicture"
-        />
+        android:layout_marginBottom="16dp" />
     <Button
         android:text="@string/btn_empezar_registro_3"
         android:layout_width="match_parent"
