--- a/app/src/main/res/layout/activity_mensajes.xml
+++ b/app/src/main/res/layout/activity_mensajes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_mensajes"
     android:layout_width="match_parent"
@@ -9,13 +9,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="paisdeyann.floway.Mensajes"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/fondochat">
 
     <android.support.v7.widget.RecyclerView
 
         android:layout_width="match_parent"
 
-        android:layout_height="500dp"
+        android:layout_height="480dp"
 
         android:id="@+id/elMeuRecyclerView"
 
@@ -28,24 +29,26 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
 
         <EditText
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:inputType="textPersonName"
-            android:text="Name"
             android:ems="10"
             android:id="@+id/editTextMensajes"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:background="@color/cardview_light_background" />
 
         <Button
-            android:text="Button"
+            android:text="Enviar"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/buttonMensajes"
-            android:layout_weight="1" />
+            android:layout_marginLeft="5dp" />
     </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
