--- a/app/src/main/res/layout/fragment_pantalla_chat.xml
+++ b/app/src/main/res/layout/fragment_pantalla_chat.xml
@@ -1,14 +1,25 @@
+
+
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <Button
-        android:text="CHAT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/button2" />
+    <android.support.v7.widget.RecyclerView
+
+        android:layout_width="match_parent"
+
+        android:layout_height="match_parent"
+
+        android:id="@+id/recyclerViewMensajes"
+
+        android:layout_alignParentStart="true"
+
+
+        android:layout_alignParentEnd="true"
+
+        android:scrollbars="vertical"/>
+
+
 </RelativeLayout>
 
 
