--- a/app/src/main/res/layout/itemgrupomensajes.xml
+++ b/app/src/main/res/layout/itemgrupomensajes.xml
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_view"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_margin="2dp"
+    card_view:cardCornerRadius="6dp"
+    card_view:cardUseCompatPadding="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
+    card_view:cardElevation="4dp">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="150dp">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewFechaItemGrupoMensaje"
+        android:textSize="20sp"
+        android:paddingTop="20sp"
+        android:paddingLeft="20sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewPersonaItemConversacion"
+        android:textSize="30sp"
+        android:paddingTop="20sp"
+        android:paddingLeft="40sp" />
 </LinearLayout>
+    </android.support.v7.widget.CardView>
