--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -3,45 +3,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="@color/second_accent">
-    <Button
-        android:text="@string/btn_img_registro_3"
-        android:layout_width="match_parent"
-        android:layout_above="@+id/ButtonContinuarTercerReg"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/ButtonBuscaFoto"
-        android:elevation="10dp"
-        android:layout_height="50dp"
-        android:background="@color/second_accent_dark"
-        android:gravity="center"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp" />
-    <Button
-        android:text="@string/btn_empezar_registro_3"
-        android:layout_width="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/ButtonContinuarTercerReg"
-        android:elevation="10dp"
-        android:layout_height="50dp"
-        android:background="@color/second_accent_dark"
-        android:gravity="center"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp" />
 
-    <ImageView
+    <ScrollView
         android:layout_width="match_parent"
-        app:srcCompat="@color/accent"
-        android:id="@+id/imageView3"
-        android:layout_height="200dp" />
-
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:srcCompat="@color/second_accent_dark"
-        android:id="@+id/imageView2"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="match_parent"
+                app:srcCompat="@color/accent"
+                android:id="@+id/imageView3"
+                android:layout_height="200dp" />
+
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                app:srcCompat="@color/second_accent_dark"
+                android:id="@+id/imageView2"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                app:fabSize="mini"
+                app:srcCompat="@drawable/ic_close_light"
+                android:id="@+id/floatingActionButton"
+
+                android:foregroundGravity="bottom|right"
+                android:layout_marginTop="174dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></LinearLayout>
+
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
