--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
                     android:layout_marginRight="12dp"
                     android:layout_gravity="center_horizontal"
                     android:id="@+id/button"
-                    android:layout_above="@+id/textView"
+                    android:layout_above="@+id/textViewApellidosNavigation"
                     android:layout_centerHorizontal="true"
                     android:layout_marginBottom="15dp"
                     android:onClick="login"
@@ -91,7 +91,7 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="@string/tv_nousuarioaun_activity_main"
-                    android:id="@+id/textView"
+                    android:id="@+id/textViewApellidosNavigation"
                     android:layout_gravity="center_horizontal"
                     android:textColor="#ffffff"
                     android:layout_above="@+id/link"
